# rust-statsd

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: client.rs
src/: client.rs  lib.rs  metric.rs
