[package]
name = "statsd"
version = "0.8.0"
description = "A basic statsd client for rust."
homepage = "https://github.com/markstory/rust-statsd"
readme = "README.md"
license = "MIT"
authors = ["Mark Story <mark@mark-story.com>"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.txt",
]

[dependencies]
time = "^0.1"
rand = "^0.3"
