[package]
name = "statsd"
version = "0.13.0"
description = "A basic statsd client for rust."
homepage = "https://github.com/markstory/rust-statsd"
readme = "README.md"
license = "MIT"
authors = ["Mark Story <mark@mark-story.com>"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.txt",
]

[dependencies]
rand = "^0.3"
