[package]
name = "statsd"
version = "0.14.1"
description = "A basic statsd client for rust."
homepage = "https://github.com/markstory/rust-statsd"
readme = "README.md"
license = "MIT"
authors = ["Mark Story <mark@mark-story.com>"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE.txt",
]
edition = "2018"

[dependencies]
rand = "0.8"

[dev-dependencies]
itertools = "0.10"
